--- a/public/main.css
+++ b/public/main.css
@@ -343,24 +343,25 @@ img, video {
 
 .login-main-ctn {
   display: flex;
-  margin: auto;
-  align-items: center;
-  width: 100%;
-  justify-content: center;
+  justify-content: center; /* horizontal centering */
+  align-items: center;     /* vertical centering */
   padding: var(--spacing-md);
+  width: 100%;
+  height: 100vh;           /* full height of the viewport */
 }
 
 .login-container {
-    background: var(--white);
-    display: block;
-    flex-direction: column;
-    border-radius: var(--border-radius);
-    padding: var(--spacing-xl) var(--spacing-lg);
-    box-shadow: var(--shadow);
-    max-width: 400px;
-    width: 100%;
-    margin: 0 auto;
+  background: var(--white);
+  display: flex;                  /* change from block to flex */
+  flex-direction: column;
+  border-radius: var(--border-radius);
+  padding: var(--spacing-xl) var(--spacing-lg);
+  box-shadow: var(--shadow);
+  max-width: 400px;
+  width: 100%;
 }
+
+
 
 .login-logo {
     position: absolute;
